--- a/ch2/README
+++ b/ch2/README
@@ -1,7 +1,10 @@
 Section2. Request. Page 38.
      guess_browser.rb
 cgi_inspector.rb
+
+Section 3. Response. 
 generating_body.rb
+
 generating_body2.rb
 inspect_env.rb
 redirect.rb
